# retrnote

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
Formula/: retrnote.rb
examples/eg.1/: README.txt  eg.1.docx  eg.1.txt
examples/eg.2/: README.txt  eg.2.docx  eg.2.txt
examples/eg.3/: README.txt  eg.3.docx  eg.3.txt
examples/eg.4/: README.txt  eg.4.docx  eg.4.txt
examples/eg.5/: README.txt  eg.5.docx  eg.5.txt
src/retrnote/: __init__.py  cli.py
